Atualizando o projeto e mudando a implementação para utilizar os valores da variável padrão $ctrl dentro do template, fazendo o bind diretamente, caso seja necessário fazer alguma validação nesse valor utilizar o a variável $scope, e só depois do valor ser validado repassar para o contexto do componente this/$ctrl

--- a/template/index.html
+++ b/template/index.html
@@ -27,7 +27,10 @@
         <div ng-controller="HomeController">
             ({greeting})
             ({valor})
-            <my-field valor="valor">lol</my-field>
+            <my-field valor="valor"></my-field>
+            
+            ({nome})
+            <my-field valor="nome"></my-field>
 
 
             <my-tabs>
